added a comment for a reminder to remove newsletter

--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ header a:hover {
   margin-top: 20px;
 }
 /* customizing newsletter button */
+/* delete this and add something!!*** */
 #newsletter input[type="Email"]{
   padding:4px;
   height: 25px;
